# mandlebrot-OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  def_make_make.py  files_make_make.py  main_make_make.py  make_make.py  readme.md
cmake/: defaults.cmake  third_party.cmake
src/include/: debug_cfg.hpp  mandelbrot.hpp  opengl_log.hpp  shader.hpp
src/shaders/: 4d_shit.frag  color_gradient.frag  mandelbrot.frag  vert_shad.vert
src/source/: main.cpp  mandelbrot.cpp  opengl_log.cpp  shader.cpp
